# Noncommutative_polynomials

./: CMakeLists.txt  constants.cpp  constants.h  monomial-3.h  polynomial-3.h  pyproject.toml  superalgebra-decomposer-3.cpp
src/: polynomial.py  sympy_test.py
