[tool.poetry]
name = "programs"
version = "0.1.0"
description = ""
authors = ["mafycek <h.lavicka@email.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
sympy = "^1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
